--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@ body {
   <p>Welcome to my website</p>
 </div>
 
+<div class = "About">
+  <h1>About Me </h1>
+</div>
+<div class = "News">
+  <h1>Newssss</h1>
+</div>
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
