--- a/About.html
+++ b/About.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <div class = "About">
     <head>
         <h1>IDK</h1>
     </head>
@@ -9,4 +10,5 @@
             Blah blah blah blah 
         </p>
     </body>
+</div>
 </html>
