--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ body {
   <a href="#home" class="active">Home</a>
   <a href="#news">News</a>
   <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="About.html">About</a>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
   </a>
@@ -78,12 +78,6 @@ body {
   <p>Welcome to my website</p>
 </div>
 
-<div class = "About">
-  <h1>About Me </h1>
-</div>
-<div class = "News">
-  <h1>Newssss</h1>
-</div>
 <script>
 function myFunction() {
   var x = document.getElementById("myTopnav");
